# Virtual-Book-Manager

./: README.md  pyproject.toml
src/virtual-book-manager/cli/: __init__.py
src/virtual-book-manager/manager/: libreria.py
src/virtual-book-manager/models/: libro.py  utente.py
src/virtual_book_manager/: __init__.py
src/virtual_book_manager/cli/: __init__.py  main.py
src/virtual_book_manager/data/: libri.json  utenti.json
src/virtual_book_manager/manager/: __init__.py  libreria.py
src/virtual_book_manager/models/: __init__.py  libro.py  utente.py
