[project]
name = "virtual-book-manager"
version = "0.1.0"
description = "Un semplice gestore di libreria virtuale scritto in Python, che consente di aggiungere libri, registrare utenti e gestire i prestiti. Progettato con una struttura modulare per separare logica, modelli e interfaccia CLI, e supporta la persistenza dei dati tramite file JSON."
authors = [
    {name = "Omisen",email = "simone.conzo@outlook.it"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# definisce la root come virtual_book_manager
packages = [{ include = "virtual_book_manager", from = "src" }] 

# crea un poetry script per esegurire direttamente il metodo run nel cli/main.py con la command line ``poetry run virtual_book_manager``
# ma prima settare tutti gli export nei vai __init__.py soprattutto quello root per l'esportazione in globale
# ed eseguire ``poetry install`` per installare virtual-book-manager ed poterlo eseguire in "/src"
[tool.poetry.scripts]
virtual_book_manager = "virtual_book_manager.cli.main:run"